Fixed the sharing buttons and made the skip button smaller

--- a/src/scss/quiz.scss
+++ b/src/scss/quiz.scss
@@ -379,7 +379,9 @@ div.waz_qc_quiz button.waz_qc_button.waz_qc_submit_email_button {
 	width: 100%;
 }
 
-div.waz_qc_quiz button.waz_qc_skip_email_button {}
+div.waz_qc_quiz button.waz_qc_skip_email_button {
+	font-size: 8px;
+}
 
 div.waz_qc_quiz button.waz_qc_restart_button {}
 
